Stop code blocks from producing horizontal scroll
By wrapping lines. Without any indication of wrap in code block. Not
cool but will have to suffice for now.

--- a/assets/main.scss
+++ b/assets/main.scss
@@ -45,6 +45,7 @@ a, a:visited, a:hover {
 pre, code {
   border: 1px solid #e0e0e0;
   background-color: #f5f5f5;
+  white-space: pre-wrap;
 }
 
 h2, p {
